# emu430f5529

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  elffile_test.cpp  endian_test.cpp  gistfile1.txt  imgui.ini  main.cpp  make_code.py  make_shellcode.py  memory_test.cpp  run.sh  test.cpp  test_hex430.cpp  test_ins.cpp
.github/workflows/: cmake.yml
core/: interruptController.cpp  interruptController.h  memoryRef.cpp  memoryRef.h  memoryRegion.h  memoryView.cpp  memoryView.h  pipeline.cpp  pipeline.h  registerFile.cpp  registerFile.h  statusRegister.h
emulator/: decompiler.cpp  decompiler.h  emulator.cpp  emulator.h
gui/: CMakeLists.txt  emugui.cpp  emugui.h  glfw_backend.h
msp430/: Makefile  msp430f5529.ld  simple_1.cc
tests/: decoder_test.cpp  memory_test.cpp  registers_test.cpp
utils/: addressing.cpp  addressing.h  breakpointController.h  elffile.h  fileExplorer.h  hex430parser.h  instructions.h  interrupts.h  measure.h  opcodes.h  ports.h  program.h  programLoader.h  tickController.h  timerController.h  timers.h  utils.h
